Cambié el ícono de instagram y el ícono de cambio de idioma

--- a/contacto.html
+++ b/contacto.html
@@ -41,15 +41,12 @@
           <li class="nav-item ">
             <a class="nav-link" href="contacto.html">Contact</a>
           </li>
-          <li class="instagram">
-            <a href="https://www.instagram.com/j.l.borbolla/"><img src="imágenes/instagram.png" alt="">
-          </li></a>
             <div class="instagram">
-          <li>
+          <li class="gtranslate_wrapper">
             <div class="gtranslate_wrapper"></div>
-            <script>window.gtranslateSettings = {"default_language":"en","native_language_names":true,"languages":["en","es"],"globe_color":"##000000","wrapper_selector":".gtranslate_wrapper","flag_size":24,"alt_flags":{"es":"mexico"},"globe_size":34}</script>
-            <script src="https://cdn.gtranslate.net/widgets/latest/globe.js" defer></script>
-          </li>
+<script>window.gtranslateSettings = {"default_language":"en","native_language_names":true,"languages":["en","es"],"wrapper_selector":".gtranslate_wrapper"}</script>
+<script src="https://cdn.gtranslate.net/widgets/latest/lc.js" defer></script>
+          </li>  
           </div>
           </ul>
       </div>
@@ -64,7 +61,7 @@
         
          <div>
             <p><br><br>José Luis Borbolla | photographer <br> Cabo San Lucas, Baja California Sur, México.  <br>E-mail: borbolla32@gmail.com <br>
-            Cel: (01) 624 267 09 90   
+            Cel: (01) 624 267 09 90
             </p>
          </div>
     </div>
