--- a/Sobremi.html
+++ b/Sobremi.html
@@ -41,15 +41,12 @@
           <li class="nav-item ">
             <a class="nav-link" href="contacto.html">Contact</a>
           </li>
-          <li class="instagram">
-            <a href="https://www.instagram.com/j.l.borbolla/"><img src="imágenes/instagram.png" alt="">
-          </li></a>
             <div class="instagram">
-          <li>
+          <li class="gtranslate_wrapper">
             <div class="gtranslate_wrapper"></div>
-            <script>window.gtranslateSettings = {"default_language":"en","native_language_names":true,"languages":["en","es"],"globe_color":"##000000","wrapper_selector":".gtranslate_wrapper","flag_size":24,"alt_flags":{"es":"mexico"},"globe_size":34}</script>
-            <script src="https://cdn.gtranslate.net/widgets/latest/globe.js" defer></script>
-          </li>
+<script>window.gtranslateSettings = {"default_language":"en","native_language_names":true,"languages":["en","es"],"wrapper_selector":".gtranslate_wrapper"}</script>
+<script src="https://cdn.gtranslate.net/widgets/latest/lc.js" defer></script>
+          </li>  
           </div>
           </ul>
       </div>
@@ -63,7 +60,7 @@
         <div class="col-md-7 sobremi">
 
          <p>
-          <b> <br>Photographer & Content Maker.</b> <br>
+          <br><b> Photographer & Content Maker.</b> <br><br>
           As a passionate photographer, I pour my soul into every shot, striving to capture the essence of fleeting moments and turn them into timeless treasures. 
 
           I like to believe every photograph I create has the potential to become a cherished heirloom, adorning the walls of a family's home, will be used to share important news, or serving as a visual memoir to be shared with generations to come. It is this profound understanding that drives me to approach each session with utmost dedication and care. <br><br>
