Se agregó la funcion de cerrar el menú automáticamente cuando el usuario da click.

--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
       <nav id="menu" class="col-md-8 responsive">
         <ul class="nav justify-content-end">
           <li class="nav-item ">
-            <a class="nav-link active" aria-current="page" href="Sobremi.html">About me</a>
+            <a class="nav-link active" aria-current="page" href="Sobremi.html"onclick="cerrarMenu()">About me</a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link" href="index.html#destinations">Destinations</a>
+            <a class="nav-link" href="index.html#destinations"onclick="cerrarMenu()">Destinations</a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link" href="Galeria.html">Gallery</a>
+            <a class="nav-link" href="Galeria.html"onclick="cerrarMenu()">Gallery</a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link" href="packs.html">Packages</a>
+            <a class="nav-link" href="packs.html"onclick="cerrarMenu()">Packages</a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link" href="index.html#reviews">Reviews</a>
+            <a class="nav-link" href="index.html#reviews"onclick="cerrarMenu()">Reviews</a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link" href="contacto.html">Contact</a>
+            <a class="nav-link" href="contacto.html"onclick="cerrarMenu()">Contact</a>
           </li>
 
           <div class="instagram">
