--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
 
       <div class="headerresponsive row">
         <div class="logoresponsive">
+          <a href="index.html" class="home">
           <img src="imágenes/logo_responsive-removebg-preview.png" alt="">
+        </a>
         </div>
         <div class="nav-responsive" onclick="mostrarOcultarMenu()">
         <i class="fa-solid fa-bars-staggered"></i>
@@ -219,7 +221,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
